--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.10",
+    "framer-motion": "^7.3.2",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0"
@@ -16,6 +18,8 @@
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
   }
