--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.10",
     "framer-motion": "^7.3.2",
     "next": "latest",
