--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "framer-motion": "^7.3.2",
     "next": "latest",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.4.0",
+    "use-lanyard": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
